Remove HTMLView overrides, now that HTMLView colors are fixed in dark mode Add more to Migration Guide

--- a/src/scss/mixins/components/_forms.scss
+++ b/src/scss/mixins/components/_forms.scss
@@ -370,11 +370,6 @@
         }
     }
 
-    HtmlView {
-        color: light(primary);
-        background: light(background);
-    }
-
     PropertyEditor:focus DataFormEditorCore {
         @include colorize($contrasted-border-color: accent background 20%);
     }
